--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "version-tools",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A small module to check if two specified version numbers are major changes",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -11,7 +11,7 @@
     "major",
     "version",
     "version check",
-    "major-version-check",
+    "version-tools",
     "parser",
     "version-parser",
     "version-tools",
@@ -20,14 +20,14 @@
     "typescript"
   ],
   "bugs": {
-    "url": "https://github.com/KK-Designs/Major-version-check/issues"
+    "url": "https://github.com/KK-Designs/version-tools/issues"
   },
-  "homepage": "https://github.com/KK-Designs/Major-version-check#readme",
+  "homepage": "https://github.com/KK-Designs/version-tools#readme",
   "author": "NotBacon",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KK-Designs/Major-version-check"
+    "url": "https://github.com/KK-Designs/version-tools"
   },
   "devDependencies": {
     "jest": "^27.2.4"
