--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "version-tools",
-  "version": "1.3.2",
+  "name": "major-version-check",
+  "version": "1.3.3",
   "description": "A small module to check if two specified version numbers are major changes",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -11,23 +11,23 @@
     "major",
     "version",
     "version check",
-    "version-tools",
+    "major-version-check",
     "parser",
     "version-parser",
-    "version-tools",
+    "major-version-check",
     "first-package",
     "javascript",
     "typescript"
   ],
   "bugs": {
-    "url": "https://github.com/KK-Designs/version-tools/issues"
+    "url": "https://github.com/KK-Designs/major-version-check/issues"
   },
-  "homepage": "https://github.com/KK-Designs/version-tools#readme",
+  "homepage": "https://github.com/KK-Designs/major-version-check#readme",
   "author": "NotBacon",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KK-Designs/version-tools"
+    "url": "https://github.com/KK-Designs/major-version-check"
   },
   "devDependencies": {
     "jest": "^27.2.4"
