--- a/package.json
+++ b/package.json
@@ -1,35 +1,52 @@
 {
   "name": "major-version-check",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "description": "A small module to check if two specified version numbers are major changes",
-  "main": "./lib/index.js",
-  "types": "./lib/index.d.ts",
+  "type": "commonjs",
+  "main": "./lib/cjs/index.js",
+  "exports": {
+	".": {
+	  "require":  "./lib/cjs/index.js",
+	  "default": "./lib/esm/index.mjs"
+	}
+  },
+  "module": "./lib/esm/index.mjs",
+  "types": "./types/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "demo": "echo https://runkit.com/embed/lwken7n6k71q && exit 1",
+	"lint": "eslint .",
+	"fix": "eslint . --fix"
   },
   "keywords": [
     "major",
     "version",
     "version check",
+	"version-tools",
     "major-version-check",
     "parser",
+	"semver",
     "version-parser",
-    "major-version-check",
     "first-package",
     "javascript",
     "typescript"
   ],
   "bugs": {
-    "url": "https://github.com/KK-Designs/major-version-check/issues"
+    "url": "https://github.com/KK-Designs/version-tools/issues",
+	"email": "kkart2007@gmail.com"
   },
-  "homepage": "https://github.com/KK-Designs/major-version-check#readme",
+  "homepage": "https://github.com/KK-Designs/version-tools#readme",
   "author": "NotBacon",
-  "license": "Apache-2.0",
+  "license": "CC0-1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KK-Designs/major-version-check"
+    "url": "https://github.com/KK-Designs/version-tools"
   },
   "devDependencies": {
-    "jest": "^27.2.4"
+    "eslint": "^8.5.0",
+    "jest": "^27.4.5"
+  },
+  "dependencies": {
+    "meant": "^2.0.1"
   }
 }
