Update v1.4.1 | Release notes: https://github.com/KK-Designs/version-tools/releases/tag/v1.4.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "major-version-check",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "A small module to check if two specified version numbers are major changes",
   "type": "commonjs",
   "main": "./lib/cjs/index.js",
@@ -13,40 +13,43 @@
   "module": "./lib/esm/index.mjs",
   "types": "./types/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "demo": "echo https://runkit.com/embed/lwken7n6k71q && exit 1",
+	"test": "jest",
+	"demo": "echo https://runkit.com/embed/lwken7n6k71q && exit 1",
 	"lint": "eslint .",
 	"fix": "eslint . --fix"
   },
   "keywords": [
-    "major",
-    "version",
-    "version check",
+	"major",
+	"version",
+	"version check",
 	"version-tools",
-    "major-version-check",
-    "parser",
+	"major-version-check",
+	"parser",
 	"semver",
-    "version-parser",
-    "first-package",
-    "javascript",
-    "typescript"
+	"version-parser",
+	"first-package",
+	"javascript",
+	"typescript"
   ],
   "bugs": {
-    "url": "https://github.com/KK-Designs/version-tools/issues",
+	"url": "https://github.com/KK-Designs/version-tools/issues",
 	"email": "kkart2007@gmail.com"
   },
   "homepage": "https://github.com/KK-Designs/version-tools#readme",
   "author": "NotBacon",
   "license": "CC0-1.0",
   "repository": {
-    "type": "git",
-    "url": "https://github.com/KK-Designs/version-tools"
+	"type": "git",
+	"url": "https://github.com/KK-Designs/version-tools"
+  },
+  "engines": {
+	"node": ">=14.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.5.0",
-    "jest": "^27.4.5"
+	"eslint": "^8.5.0",
+	"jest": "^27.4.5"
   },
   "dependencies": {
-    "meant": "^2.0.1"
+	"meant": "^2.0.1"
   }
 }
