--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "module": "./lib/esm/index.mjs",
   "types": "./types/index.d.ts",
   "scripts": {
-    "test": "node ./lib/test/index.test.js",
+    "test": "node ./test/index.test.js",
     "demo": "echo https://runkit.com/embed/lwken7n6k71q && exit 1",
     "lint": "eslint .",
     "fix": "eslint . --fix"
