--- a/.github/workflows/npm-audit.yml
+++ b/.github/workflows/npm-audit.yml
@@ -1,5 +1,3 @@
-name: "NPM Audit Report - PR"
-
 on:
   push:
     branches: [ master ]
@@ -7,17 +5,13 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ master ]
   schedule:
-    - cron: '43 12 * * 6'
+    - cron: '0 0 * * *'
 
 jobs:
-  worker:
+  npm-audit-pr:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-
-      - name: NPM Audit Comment
-        uses: wx-jayesh/actions-npm-audit-comment@v1
+      - uses: actions/checkout@v2.0.0
+      - uses: miyajan/npm-audit-pr@v1.0.4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
